[tool.poetry]
name = "healenium-test"
version = "0.1.0"
description = ""
authors = ["dhythm <yuta.okada.20@gmail.com>"]
readme = "README.md"
packages = [{include = "healenium_test"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.17.2"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
